# MagicSquare_19

./: .cursorrules  .gitignore  README.md  defect_list.md  pytest.ini  requirements-gui.txt  requirements.txt
Report/: README.md  (+22 more)
src/1-2.MagicSquare_1004_개선/: pyproject.toml
src/1-2.MagicSquare_1004_개선/tests/: conftest.py
src/4.MagicSquare_1004_完/: README.md  cursorrules  pyproject.toml
src/4.MagicSquare_1004_完/Prompting/: 01.MagicSquare_InteractivePrompt_Transcript.md  02.MagicSquare_DualTrack_TDD_Prompt_Transcript.md  03.MagicSquare_CursorRules_Prompt_Transcript.md  04.MagicSquare_CursorAgents_Prompt_Transcript.md  05.MagicSquare_UserJourney_Prompt_Transcript.md  06.MagicSquare_PRD_Prompt_Transcript.md  07.MagicSquare_TDD_ToDo_And_README_Prompt_Transcript.md  08.MagicSquare_AC_FR_01_01_RED_Prompt_Transcript.md  09.MagicSquare_DualTrack_RED_TestPlan_Prompt_Transcript.md  10.MagicSquare_DualTrack_RED_Skeleton_Pytest_Prompt_Transcript.md  11.MagicSquare_AC_FR_01_01_GREEN_Anchor_Prompt_Transcript.md  12.MagicSquare_MultiTrack_GREEN_And_Screen_Prompt_Transcript.md  13.MagicSquare_Golden_Master_GM1_Prompt_Transcript.md  14.MagicSquare_REFACTOR_Preparation_Prompt_Transcript.md  15.MagicSquare_REFACTOR_Program_Roadmap_Prompt_Transcript.md  16.MagicSquare_QA_Coverage_Analysis_Prompt_Transcript.md  17.MagicSquare_Session_Summary_Prompt_Transcript.md
src/4.MagicSquare_1004_完/Report/: 01.MagicSquare_ProblemDefinition_Report.md  03.MagicSquare_CursorRules_And_FirstEntity_Report.md  04.MagicSquare_CursorAgents_Setup_Report.md  05.MagicSquare_UserJourney_To_Scenario_Report.md  (+12 more)
(+169 files in other folders)
